--- a/layout/_partial/after-footer.ejs
+++ b/layout/_partial/after-footer.ejs
@@ -14,16 +14,8 @@
 </script>
 <% } %>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js">
-</script>
-
-<%- js([
-  'lib/foundation/js/foundation',
-  'lib/foundation/js/foundation/foundation.topbar',
-  'lib/foundation/js/foundation/foundation.offcanvas'
-  ]) %>
+<%- js('js/theme') %>
 <script>
 $(document).foundation();
 </script>
 <%- js('js/script') %>
-
