Adds JS compilation with concat + uglify. Unifies app CSS / JS name.

--- a/layout/_partial/after-footer.ejs
+++ b/layout/_partial/after-footer.ejs
@@ -14,8 +14,4 @@
 </script>
 <% } %>
 
-<%- js('js/theme') %>
-<script>
-$(document).foundation();
-</script>
-<%- js('js/script') %>
+<%- js('js/app') %>
