--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -30,6 +30,6 @@
     <link rel="icon" href="<%- url_for('theme.favicon') %>">
   <% } %>
   <!--<link href="//fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet" type="text/css">-->
-  <%- css('css/style') %>
+  <%- css('css/app') %>
   <%- partial('google-analytics') %>
 </head>
