--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -3,33 +3,25 @@
 <div class="off-canvas-wrap" data-offcanvas>
   <div class="inner-wrap">
 
-
   <div id="container" class="page">
-
     <div>
       <%- partial('_partial/header', null, {cache: !config.relative_link}) %>
       <div class="l-main row">
-
         <section id="main" class="<% if (theme.sidebar){ %>medium-8 large-8 columns<% } %>">
           <%- body %>
         </section>
-
         <% if (theme.sidebar && theme.sidebar !== 'bottom'){ %>
           <%- partial('_partial/sidebar', null, {cache: !config.relative_link}) %>
         <% } %>
-
       </div>
-
       <%- partial('_partial/mobile-nav', null, {cache: !config.relative_link}) %>
-
       <hr />
       <%- partial('_partial/footer', null, {cache: !config.relative_link}) %>
     </div>
-
-
-
-    <%- partial('_partial/after-footer') %>
   </div>
 
-</div></div> <!--OffCanvas Div's-->
-</body></html>
+</div>
+<%- partial('_partial/disqus') %>
+<%- js('js/app') %>
+</body>
+</html>
