--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html class="no-js" lang="en">
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <%
   var title = page.title;
 
@@ -21,7 +23,7 @@
   %>
 
   <title><% if (title){ %><%= title %> | <% } %><%= config.title %></title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
   <%- open_graph({twitter_id: theme.twitter, google_plus: theme.google_plus, fb_admins: theme.fb_admins, fb_app_id: theme.fb_app_id}) %>
   <% if (theme.rss){ %>
     <link rel="alternative" href="<%- url_for('theme.rss') %>" title="<%= config.title %>" type="application/atom+xml">
