--- a/layout/_partial/archive.ejs
+++ b/layout/_partial/archive.ejs
@@ -4,12 +4,10 @@
   <% }) %>
   <% if (page.total > 1){ %>
     <nav id="pagination">
-      <% if (page.prev){ %>
-        <a href="<%- config.root %><%- page.prev_link %>" class="alignleft prev">Newer posts</a>
-      <% } %>
-      <% if (page.next){ %>
-        <a href="<%- config.root %><%- page.next_link %>" class="alignright next">Older posts</a>
-      <% } %>
+      <%- paginator({
+        prev_text: '&laquo; Prev',
+        next_text: 'Next &raquo;'
+      }) %>
     </nav>
   <% } %>
 <% } else { %>
