--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -5,7 +5,7 @@
       &copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %><br>
     </div>
     <div class="large-6 columns text-right">
-      Powered by <a href="http://hexo.io/" target="_blank">Hexo</a>
+      <%- __('powered_by') %>
     </div>
   </div>
 
