--- a/layout/_widget/category.ejs
+++ b/layout/_widget/category.ejs
@@ -1,6 +1,6 @@
 <% if (site.categories.length){ %>
   <div class="widget-wrap">
-    <h3 class="widget-title subheading">Categories</h3>
+    <h3 class="widget-title subheading"><%= __('categories') %></h3>
     <div class="widget">
       <%- list_categories() %>
     </div>
