--- a/layout/_widget/search.ejs
+++ b/layout/_widget/search.ejs
@@ -4,7 +4,7 @@
       <input type="search" name="q" results="0" placeholder="<%= __('search') %>">
     </div>
     <div class="large-4 small-3 columns">
-      <button href="#" class="button expand">Search</button>
+      <button href="#" class="button expand"><%= __('search') %></button>
     </div>
     <input type="hidden" name="q" value="site:<%- config.url.replace(/^https?:\/\//, '') %>">
   </form>
