Modifies date format for the articles.

--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -12,7 +12,7 @@
 
     <div class="article-meta">
       <span class="article-datetime">
-      <%- partial('post/date', {class_name: 'article-date', date_format: 'MMM Do, YYYY'}) %>
+      <%- partial('post/date', {class_name: 'article-date', date_format: 'YYYY. MMMM D.'}) %>
       </span>
       <%- partial('post/category') %>
     </div>
