Cleans up how tags are implemented.

--- a/layout/_widget/tag.ejs
+++ b/layout/_widget/tag.ejs
@@ -2,7 +2,7 @@
   <div class="widget-wrap subheading">
     <h3 class="widget-title"><%= __('tags') %></h3>
     <div class="widget">
-      <%- list_tags() %>
+      <%- foundation_list_tags() %>
     </div>
   </div>
 <% } %>
