--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -32,5 +32,6 @@
     <link rel="icon" href="<%- url_for('theme.favicon') %>">
   <% } %>
   <%- css('css/app') %>
+  <%- css('foundation-icons/foundation-icons.css') %>
   <%- partial('google-analytics') %>
 </head>
