Adds initial Photoswipe support.

--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -33,5 +33,9 @@
   <% } %>
   <%- css('css/app') %>
   <%- css('foundation-icons/foundation-icons.css') %>
+
+  <%- css('photoswipe/photoswipe.css') %>
+  <%- css('photoswipe/default-skin/default-skin.css') %>
+  
   <%- partial('google-analytics') %>
 </head>
