--- a/scss/app.scss
+++ b/scss/app.scss
@@ -3,6 +3,7 @@
 @import 'settings';
 @import 'foundation';
 @import 'motion-ui';
+@import 'algolia';
 
 @include foundation-global-styles;
 @include foundation-grid;
