--- a/layout/_partial/archive-post.ejs
+++ b/layout/_partial/archive-post.ejs
@@ -1,8 +1,8 @@
 <article class="archive-article archive-type-<%= post.layout %>">
   <div class="archive-article-inner">
     <header class="archive-article-header">
-      <%- partial('post/date', {class_name: 'archive-article-date', date_format: 'MMM D'}) %>
-      <%- partial('post/title', {class_name: 'archive-article-title'}) %>
+      <%- partial('post/date', {class_name: 'archive-article-date', date_format: __('article_archive_date_format')}) %>
+      <%- partial('post/title', {class_name: 'archive-article-title', archive: true }) %>
     </header>
   </div>
 </article>
