--- a/layout/_partial/post/nav.ejs
+++ b/layout/_partial/post/nav.ejs
@@ -3,12 +3,12 @@
 
   <% if (post.prev){ %>
     <a href="<%- url_for(post.prev.path) %>" id="article-nav-newer" class="article-nav-link-wrap">
-      <strong class="article-nav-caption">Newer</strong>
+      <strong class="article-nav-caption"><%- __('newer') %> </strong>
       <div class="article-nav-title">
         <% if (post.prev.title){ %>
           <%= post.prev.title %>
         <% } else { %>
-          (no title)
+          <%- __('no_title') %>
         <% } %>
       </div>
     </a>
@@ -16,7 +16,7 @@
 
   <% if (post.next){ %>
     <a href="<%- url_for(post.next.path) %>" id="article-nav-older" class="article-nav-link-wrap">
-      <strong class="article-nav-caption">Older</strong>
+      <strong class="article-nav-caption"><%- __('older') %></strong>
       <div class="article-nav-title"><%= post.next.title %></div>
     </a>
   <% } %>
