--- a/layout/_partial/post/title.ejs
+++ b/layout/_partial/post/title.ejs
@@ -1,15 +1,22 @@
+<%
+var h_tag = 'h2';
+if (typeof archive == 'undefined' || !archive) {
+  h_tag = 'h1';
+}
+%>
+
 <% if (post.link){ %>
-  <h1 itemprop="name">
+  <<%- h_tag %>> itemprop="name">
     <a class="<%= class_name %>" href="<%- url_for(post.link) %>" target="_blank" itemprop="url"><%= post.title %></a>
-  </h1>
+  </<%- h_tag %>>
 <% } else if (post.title){ %>
   <% if (index){ %>
-    <h1 itemprop="name">
+    <<%- h_tag %> itemprop="name">
       <a class="<%= class_name %>" href="<%- url_for(post.path) %>"><%= post.title %></a>
-    </h1>
+    </<%- h_tag %>>
   <% } else { %>
-    <h1 class="<%= class_name %>" itemprop="name">
+    <<%- h_tag %> class="<%= class_name %>" itemprop="name">
       <%= post.title %>
-    </h1>
+    </<%- h_tag %>>
   <% } %>
 <% } %>
