--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="<%= config.language %>">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -23,11 +23,10 @@
   %>
 
   <title><% if (title){ %><%= title %> | <% } %><%= config.title %></title>
-  <base href="<%= config.root %>" />
 
   <%- open_graph({twitter_id: theme.twitter, google_plus: theme.google_plus, fb_admins: theme.fb_admins, fb_app_id: theme.fb_app_id}) %>
   <% if (theme.rss){ %>
-    <link rel="alternative" href="<%- url_for('theme.rss') %>" title="<%= config.title %>" type="application/atom+xml">
+    <link rel="alternate" href="<%- url_for('theme.rss') %>" title="<%= config.title %>" type="application/atom+xml">
   <% } %>
   <% if (theme.favicon){ %>
     <link rel="icon" href="<%- url_for('theme.favicon') %>">
