--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -1,11 +1,6 @@
-
-<div id="header" class="row">
-	<h1 class="logo-wrap">
-	  <a href="<%- url_for() %>" id="logo"><%= config.title %></a>
-	</h1>
+<header id="header" class="row">
+	<h1 id="blog-name"><a href="<%- url_for() %>"><%= config.title %></a></h1>
 	<% if (theme.subtitle){ %>
-	  <h2 class="small">
-		<%= theme.subtitle %>
-	  </h2>
+	  <span id="blog-subtitle" class="small"><%= theme.subtitle %></span>
 	<% } %>
-</div>
+</header>
