--- a/layout/_partial/post/title.ejs
+++ b/layout/_partial/post/title.ejs
@@ -1,22 +1,15 @@
-<%
-var h_tag = 'h2';
-if (typeof archive == 'undefined' || !archive) {
-  h_tag = 'h1';
-}
-%>
-
 <% if (post.link){ %>
-  <<%- h_tag %>> itemprop="name">
-    <a class="<%= class_name %>" href="<%- url_for(post.link) %>" target="_blank" itemprop="url"><%= post.title %></a>
-  </<%- h_tag %>>
+  <h1>
+    <a class="<%= class_name %>" href="<%- url_for(post.link) %>" target="_blank"><%= post.title %></a>
+  </h1>
 <% } else if (post.title){ %>
   <% if (index){ %>
-    <<%- h_tag %> itemprop="name">
+    <h1>
       <a class="<%= class_name %>" href="<%- url_for(post.path) %>"><%= post.title %></a>
-    </<%- h_tag %>>
+    </h1>
   <% } else { %>
-    <<%- h_tag %> class="<%= class_name %>" itemprop="name">
+    <h1 class="<%= class_name %>">
       <%= post.title %>
-    </<%- h_tag %>>
+    </h1>
   <% } %>
 <% } %>
