--- a/layout/_widget/search.ejs
+++ b/layout/_widget/search.ejs
@@ -1,7 +1,7 @@
 <div class="l-search">
   <form class="row collapse" action="//google.com/search" method="get" accept-charset="utf-8">
     <div class="large-12 small-12 columns">
-      <input type="search" id="searchbox" name="q" results="0" placeholder="<%= __('search') %>">
+      <input type="search" id="searchbox" name="q" placeholder="<%= __('search') %>">
     </div>
   </form>
 </div>
