--- a/layout/_widget/archive.ejs
+++ b/layout/_widget/archive.ejs
@@ -1,9 +1,9 @@
 <% if (site.posts.length){ %>
-  <div class="widget-wrap">
+  <section class="widget-wrap">
     <h3 class="widget-title subheading"><%= __('archive_a') %></h3>
     <div class="widget">
       <%- list_archives() %>
     </div>
-  </div>
+  </section>
 <% } %>
 
