--- a/layout/_widget/category.ejs
+++ b/layout/_widget/category.ejs
@@ -1,8 +1,8 @@
 <% if (site.categories.length){ %>
-  <div class="widget-wrap">
+  <section class="widget-wrap">
     <h3 class="widget-title subheading"><%= __('categories') %></h3>
     <div class="widget">
       <%- list_categories() %>
     </div>
-  </div>
+  </section>
 <% } %>
