--- a/layout/_widget/recent_posts.ejs
+++ b/layout/_widget/recent_posts.ejs
@@ -1,5 +1,5 @@
 <% if (site.posts.length){ %>
-  <div class="widget-wrap">
+  <section class="widget-wrap">
     <h3 class="widget-title subheading"><%= __('recent_posts') %></h3>
     <div class="widget">
       <ul>
@@ -10,5 +10,5 @@
         <% }) %>
       </ul>
     </div>
-  </div>
+  </section>
 <% } %>
