--- a/layout/_widget/search.ejs
+++ b/layout/_widget/search.ejs
@@ -1,7 +1,8 @@
-<div class="l-search">
+<section class="l-search">
+  <h3 class="widget-title subheading"><%= __('search') %></h3>
   <form class="row collapse" action="//google.com/search" method="get" accept-charset="utf-8">
     <div class="large-12 small-12 columns">
       <input type="search" id="searchbox" name="q" placeholder="<%= __('search') %>">
     </div>
   </form>
-</div>
+</section>
