--- a/layout/_widget/tag.ejs
+++ b/layout/_widget/tag.ejs
@@ -1,8 +1,8 @@
 <% if (site.tags.length){ %>
-  <div class="widget-wrap subheading">
+  <section class="widget-wrap subheading">
     <h3 class="widget-title"><%= __('tags') %></h3>
     <div class="widget">
       <%- foundation_list_tags() %>
     </div>
-  </div>
+  </section>
 <% } %>
