--- a/layout/_widget/tagcloud.ejs
+++ b/layout/_widget/tagcloud.ejs
@@ -1,8 +1,8 @@
 <% if (site.tags.length){ %>
-  <div class="widget-wrap subheading">
-    <h3 class="widget-title"><%= __('tagcloud') %></h3>
+  <section class="widget-wrap">
+    <h3 class="widget-title subheading"><%= __('tagcloud') %></h3>
     <div class="widget tagcloud">
       <%- tagcloud() %>
     </div>
-  </div>
+  </section>
 <% } %>
