Adds some extra styling.

--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -9,3 +9,17 @@
 }
 
 a.label:hover { color: #e6e6e6; }
+
+article .article-header h1 {
+  margin-top: 0.5em;
+}
+
+#pagination {
+  text-align: center;
+  margin-top: 3em;
+  margin-bottom: 1em;
+}
+
+#footer {
+  margin-bottom: 2em;
+}
