--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i|Source+Sans+Pro:400,400i,700,700i&subset=latin-ext');
+
 .article-nav-link strong { line-height: 2em; }
 #article-nav-newer { text-align: left; }
 #article-nav-older { text-align: right; }
@@ -10,8 +12,18 @@
 
 a.label:hover { color: #e6e6e6; }
 
+article .article-meta {
+  margin-bottom: 0.5em;
+  .label {
+    position: relative;
+    top: -1px;
+  }
+}
 article .article-header h1 {
   margin-top: 0.5em;
+}
+article .article-datetime {
+  margin-right: 0.5em;
 }
 
 #pagination {
@@ -22,4 +34,9 @@ article .article-header h1 {
 
 #footer {
   margin-bottom: 2em;
+}
+
+.pswp__caption__center {
+  text-align: center;
+  font-size: 24px;
 }
