--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -102,7 +102,7 @@ $block-grid-max: 8;
 // 4. Base Typography
 // ------------------
 
-$header-font-family: 'Lato', Helvetica, Roboto, Arial, sans-serif;
+$header-font-family: 'Roboto', Helvetica, Roboto, Arial, sans-serif;
 $header-font-weight: 300;
 $header-font-style: normal;
 $font-family-monospace: Consolas, 'Liberation Mono', Courier, monospace;
