--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i|Source+Sans+Pro:400,400i,700,700i&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i|Source+Sans+Pro:400,400i,700,700i&subset=latin-ext');
 
 .article-nav-link strong { line-height: 2em; }
 #article-nav-newer { text-align: left; }
