--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -4,6 +4,8 @@
 #article-nav-newer { text-align: left; }
 #article-nav-older { text-align: right; }
 
+#blog-name { font-weight: 400; }
+
 .tag-list-count.badge {
   position: relative;
   top: -2px;
@@ -19,8 +21,8 @@ article .article-meta {
     top: -1px;
   }
 }
-article .article-header h1 {
-  margin-top: 0.5em;
+article {
+  margin-bottom: 0.5em;
 }
 article .article-datetime {
   margin-right: 0.5em;
