--- a/layout/_widget/search.ejs
+++ b/layout/_widget/search.ejs
@@ -2,7 +2,7 @@
   <h3 class="widget-title subheading"><%= __('search') %></h3>
   <form class="row collapse" action="//google.com/search" method="get" accept-charset="utf-8">
     <div class="large-12 small-12 columns">
-      <input type="search" id="searchbox" name="q" placeholder="<%= __('search') %>">
+      <input type="search" id="searchbox" name="q" placeholder="<%= __('search') %> (powered by Algolia)">
     </div>
   </form>
 </section>
