--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -1,5 +1,20 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i|Source+Sans+Pro:400,400i,700,700i&subset=latin-ext');
 
+html {
+  padding: 1em;
+}
+
+// Size overrides for FlowType (we need to set ems instead of rem which might not work)
+.badge {
+  font-size: 0.6em;
+}
+.button {
+  font-size: 0.9em;
+}
+.pagination li {
+  font-size: 1em;
+}
+
 .article-nav-link strong { line-height: 2em; }
 #article-nav-newer { text-align: left; }
 #article-nav-older { text-align: right; }
