--- a/layout/_partial/post/date.ejs
+++ b/layout/_partial/post/date.ejs
@@ -1,3 +1,12 @@
-<a href="<%- url_for(post.path) %>" class="<%= class_name %>">
-  <time datetime="<%= date_xml(post.date) %>"><%= date(post.date, date_format) %></time>
-</a>
+<div class="article-dates">
+  <%= __('post_made_at') %>
+  <a href="<%- url_for(post.path) %>" class="<%= class_name %>">
+    <time datetime="<%= date_xml(post.date) %>"><%= date(post.date, date_format) %></time>
+  </a>
+  <% if (post.updated != post.date) { %>
+  <%= __('post_updated_at') %>
+  <a href="<%- url_for(post.path) %>" class="<%= class_name %>">
+    <time datetime="<%= date_xml(post.updated) %>"><%= date(post.updated, date_format) %></time>
+  </a>
+  <% } %>
+</div>
