Fixes row / column related mess.

--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -1,4 +1,4 @@
-<header id="header" class="row">
+<header id="header" class="row columns">
 	<h1 id="blog-name"><a href="<%- url_for() %>"><%= config.title %></a></h1>
 	<% if (theme.subtitle){ %>
 	  <span id="blog-subtitle" class="small"><%= theme.subtitle %></span>
