--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -1,4 +1,4 @@
-<article id="<%= post.layout %>-<%= post.slug %>" class="article article-type-<%= post.layout %> row">
+<article id="<%= post.layout %>-<%= post.slug %>" class="article article-type-<%= post.layout %>">
   <div class="article-main">
 
     <%- partial('post/gallery') %>
