--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -4,7 +4,7 @@
     <div id="footer-info" class="large-6 columns">
       &copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %><br>
     </div>
-    <div class="large-6 columns medium-text-right small-only-text-left">
+    <div class="large-6 columns medium-text-left large-text-right">
       <%- __('powered_by') %>
     </div>
   </div>
