--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -2,10 +2,10 @@
 <body>
   <%- partial('_partial/header', null, {cache: !config.relative_link}) %>
   <div class="l-main row">
-    <main id="main" class="medium-8 large-8 columns">
+    <main id="main" class="large-8 columns">
       <%- body %>
     </main>
-    <aside id="sidebar" class="medium-4 large-4 columns">
+    <aside id="sidebar" class="large-4 columns">
     <%- partial('_partial/sidebar', null, {cache: !config.relative_link}) %>
     </aside>
   </div>
