Improves quote style.

--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -71,3 +71,10 @@ article {
   text-align: center;
   font-size: 24px;
 }
+
+blockquote {
+  font-size: 1.25em;
+  font-weight: 400;
+  font-family: "Roboto", Helvetica, Roboto, Arial, sans-serif;
+  font-style: italic;
+}
