Additional color adjustments.

--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -78,3 +78,7 @@ blockquote {
   font-family: "Roboto", Helvetica, Roboto, Arial, sans-serif;
   font-style: italic;
 }
+
+#footer, .widget-title {
+  color: #666;
+}
