--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -42,6 +42,8 @@
 
 @import 'util/util';
 
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,700,700i|Source+Sans+Pro:400,400i,700,700i&subset=latin-ext');
+
 // 1. Global
 // ---------
 
@@ -103,7 +105,7 @@ $block-grid-max: 8;
 // ------------------
 
 $header-font-family: 'Roboto', Helvetica, Roboto, Arial, sans-serif;
-$header-font-weight: 300;
+$header-font-weight: 100;
 $header-font-style: normal;
 $font-family-monospace: Consolas, 'Liberation Mono', Courier, monospace;
 $header-sizes: (
