--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i|Source+Sans+Pro:400,400i,700,700i&subset=latin-ext');
-
 html {
   padding: 1em;
 }
@@ -44,7 +42,10 @@ html {
   left: 4px;
 }
 
-a.label:hover { color: #e6e6e6; }
+a.label:hover {
+  color: inherit;
+  background-color: darken($label-background, 5%);
+}
 
 article .article-meta {
   margin-bottom: 0.5em;
