Adjusts header region spacing and header sizes.

--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -20,6 +20,11 @@ html {
   font-style: italic;
 }
 
+#header {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
 .article-footer {
   margin-top: 2em;
 }
