--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -26,10 +26,10 @@
 
   <%- open_graph({twitter_id: theme.twitter, google_plus: theme.google_plus, fb_admins: theme.fb_admins, fb_app_id: theme.fb_app_id}) %>
   <% if (theme.rss){ %>
-    <link rel="alternate" href="<%- url_for('theme.rss') %>" title="<%= config.title %>" type="application/atom+xml">
+    <link rel="alternate" href="<%- url_for(theme.rss) %>" title="<%= config.title %>" type="application/atom+xml">
   <% } %>
   <% if (theme.favicon){ %>
-    <link rel="icon" href="<%- url_for('theme.favicon') %>">
+    <link rel="icon" href="<%- url_for(theme.favicon) %>">
   <% } %>
   <%- css('css/app') %>
   <%- css('foundation-icons/foundation-icons.css') %>
