--- a/layout/_widget/tagcloud.ejs
+++ b/layout/_widget/tagcloud.ejs
@@ -2,7 +2,7 @@
   <section class="widget-wrap">
     <h3 class="widget-title subheading"><%= __('tagcloud') %></h3>
     <div class="widget tagcloud">
-      <%- tagcloud() %>
+      <%- tagcloud({min_font: 0.85, max_font: 2.25, unit: 'rem'}) %>
     </div>
   </section>
 <% } %>
