Changes some styling.

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -109,14 +109,14 @@ $header-font-weight: 100;
 $header-font-style: normal;
 $font-family-monospace: Consolas, 'Liberation Mono', Courier, monospace;
 $header-sizes: (
-  /*small: (
+  small: (
     'h1': 24,
     'h2': 20,
     'h3': 19,
     'h4': 18,
     'h5': 17,
     'h6': 16,
-  ),*/
+  ),
   medium: (
     'h1': 48,
     'h2': 40,
