--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -1,5 +1,17 @@
 html {
-  padding: 1em;
+  @include breakpoint(small only) {
+    padding: 0.25em;
+  }
+
+  @include breakpoint(medium) {
+    padding: 1em;
+  }
+}
+
+body {
+  @include breakpoint(small only) {
+    font-size: rem-calc(14);
+  }
 }
 
 // Size overrides for FlowType (we need to set ems instead of rem which might not work)
@@ -23,6 +35,10 @@ html {
 #header {
   margin-top: 1em;
   margin-bottom: 1em;
+}
+
+.article-more-link {
+  clear: both;
 }
 
 .article-footer {
@@ -57,6 +73,7 @@ article .article-meta {
   .label {
     position: relative;
     top: -1px;
+    font-size: 0.85em;
   }
 }
 article {
